# love2dhub

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: gen-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  runtime_cache.rs
src/components/: AboutPanel.tsx  BuildPanel.tsx  MetadataPanel.tsx  PackagesPanel.tsx  ProjectConfig.tsx  SettingsPanel.tsx  Sidebar.tsx  TaskQueue.tsx  VersionManager.tsx
src/i18n/: en.ts  index.ts  useT.ts  zh-CN.ts
src/lib/: tauri.ts
src/store/: useAppStore.ts
src/types/: index.ts
