[package]
name = "love2d-hub"
version = "0.1.0"
description = "Love2D cross-platform distribution tool"
authors = []
edition = "2021"

[lib]
name = "love2d_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "love2d-hub"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
zip = "2"
anyhow = "1"
dirs = "5"
